[package]
name = "trpl_commons"
version = "0.1.0"
authors = ["Luís Rodrigues Soares <luis@luisonthekeyboard.com>"]
edition = "2018"
license = "Apache-2.0"
description = "A Commons Library based on learning from The Rust Programming Language (TRPL) Book"
homepage = "https://github.com/luisonthekeyboard/trpl_commons"
documentation = "https://github.com/luisonthekeyboard/trpl_commons"
repository = "https://github.com/luisonthekeyboard/trpl_commons"
readme = "README.md"
keywords = ["trpl", "the book", "learning", "commons"]
categories = ["development-tools"]

[dependencies]
